--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,64 @@ color:#f5f5f5;
 .jumbotron{margin-bottom: 0;}
 
 /* Background for Thumbnail gallery */
-.bg-default {
-  background-color: black;
+[class*='hero-'] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  margin-bottom: 2em;
 }
+[class*='hero-']:hover::before {
+  top: -100%;
+}
+[class*='hero-']:hover::after {
+  color: transparent;
+}
+
+  [class*='hero-']::before {
+  transition: all .5s;
+  position: absolute;
+  width: calc(100% - 30px);
+  height: 100%;
+  top: 0;
+  left: 15px;
+  content: "";
+  background-color: rgba(0, 0, 0, .7);
+  background-origin: padding-box;
+}
+[class*='hero-']::after {
+  position: absolute;
+  transition: all .4s;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.hero-1:after {
+  content: 'Imagen Corporativa';
+}
+
+.hero-2:after {
+  content: 'Actividades de Integración';
+}
+
+.hero-3:after {
+  content: 'Team Building';
+}
+
+.hero-4:after {
+  content: 'Eventos Deportivos';
+}
+.hero-5:after {
+  content: 'Concurso de Talentos';
+}
+.hero-6:after {
+  content: 'Viaje de Incentivo';
+}
+
+
+
