--- a/css/style.css
+++ b/css/style.css
@@ -230,3 +230,14 @@ color:#f5f5f5;
 .team-item > h3 {
   margin-bottom: 0px;
 }
+
+.service_title {
+  /* border: .1em solid; */
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: bold;
+  padding: .3em 1.9em;
+  color: rgb(101,25,103);
+  box-shadow: 4px 5px 10px #888888;
+}
