--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ h6 {
   }
 
   h3 {
-    font-size: 1.563em;
+    font-size: 1.463em;
   }
 
   h4 {
@@ -200,5 +200,33 @@ color:#f5f5f5;
   content: 'Viaje de Incentivo';
 }
 
+/* Team Seaction */
 
+.team-section {
+  min-height: 90vh;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-image: url(../assets/img/pexels.jpeg);
+  background-position: center center;
+}
 
+.team-item {
+  background-color: black;
+  opacity: 0.8;
+}
+
+.team-item > p {
+  margin-bottom: 0px;
+  font-size: .8125em;
+  text-align: justify;
+  color: white;
+  font-weight: bold;
+}
+
+.team-item > h3,h5 {
+  color: white;
+}
+
+.team-item > h3 {
+  margin-bottom: 0px;
+}
